--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
 /.project
+
+# Xilinx ISE generated files #
+##############################
+.Xil/
+_xmsgs/
+iseconfig/
+xst/
+templates/
+isim/
+tmp/
+db/
+incremental_db/
+work/
+transcript
+*.exe
+*.swp
+*~
+*#
+*.txt
+*.xds
+*.tcl
+*.html
+*.gise
+*.log
+*.cmd_log
+*.debug
+*.xdl
+*.xreport
+*.ncd
+*.xwbt
+*.xml
+*.vhi
+*.cr.mti
+*.wlf
+*.ini
+*.wdb
+*.ace
+*.prj
+*.stx
+*.svf
+*.scr
+*.bak
+*.elf
+*.xrpt
+*.wcfg
+*.cmd
+*.sh
+*.xmsgs
+*.mem
+*.lso
+*.xst
+*.syr
